--- a/index.html
+++ b/index.html
@@ -1841,6 +1841,16 @@
                     class="fab fa-instagram"></i></a></li>
               <li><a class="google-plus" href="https://www.linkedin.com/in/momentum-summit/" target="_blank"><i
                     class="lni-linkedin-filled"></i></a></li>
+<br>
+<br>
+
+                    <a class="widget-title" style="padding-top: 10px;" href="tel:+91-9502007240">9502007240 </a>
+                    <br>
+                    <a class="widget-title" style="padding-top: 10px;" href="mailto:support@momentum2021.in">support@momentum2021.in </a>
+
+
+                    <!-- <a class="nav-link scrollto" href="tel:+91-63-63294498" >6363294498</a> -->
+
 
             </ul>
           </div>
