--- a/index.html
+++ b/index.html
@@ -1844,7 +1844,9 @@
 <br>
 <br>
 
-                    <a class="widget-title" style="padding-top: 10px;" href="tel:+91-9502007240">9502007240 </a>
+                    <a class="widget-title" style="padding-top: 10px;" href="tel:+91-9502007240">9502007240 </a> <br> 
+                    <a class="widget-title" style="padding-top: 10px;" href="tel:+91-7569097880">7569097880 </a>
+                    
                     <br>
                     <a class="widget-title" style="padding-top: 10px;" href="mailto:support@momentum2021.in">support@momentum2021.in </a>
 
