--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <meta property="og:image" content="assets/img/onlylogo.jpg"/>
+
   <title>Momentum 2021</title>
 
   <!-- Bootstrap CSS -->
