updat for 23 and 24

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
           <div class="counter wow fadeInRight" data-wow-delay="0.9s">
             <div class="icon"><i class="fas fa-users fa-4x"></i></div>
             <p>1000 Available Seats</p>
-            <span>Hurryup! First Come Firet serve</span>
+            <span>Hurryup! First Come First serve</span>
           </div>
         </div>
         <!-- Counter Item -->
@@ -483,8 +483,8 @@
                 <a class="nav-link active" id="monday-tab" data-toggle="tab" href="#monday" role="tab"
                   aria-controls="monday" aria-expanded="true">
                   <div class="item-text">
-                    <h4>Saturday</h4>
-                    <h5>9 October</h5>
+                    <h4>Thursdayday</h4>
+                    <h5>23 October</h5>
                   </div>
                 </a>
               </li>
@@ -492,8 +492,8 @@
                 <a class="nav-link" id="tuesday-tab" data-toggle="tab" href="#tuesday" role="tab"
                   aria-controls="tuesday">
                   <div class="item-text">
-                    <h4>Sunday</h4>
-                    <h5>10 October</h5>
+                    <h4>Fridayday</h4>
+                    <h5>24 October</h5>
                   </div>
                 </a>
               </li>
