payment link update

--- a/index.html
+++ b/index.html
@@ -1584,7 +1584,7 @@
 
           </ul>
         </div>
-        <a href="https://imjo.in/BJKhxA" target="_blank" class="btn btn-common">Buy Ticket</a>
+        <a href="https://imjo.in/fA7r8r" target="_blank" class="btn btn-common">Buy Ticket</a>
       </div>
       <!-- </div>
         </div> -->
